# OpenALPR_test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
